# P600_uav_control

./: .gitignore  README.md
T265_tof_ws/src/VIO/: CMakeLists.txt
T265_tof_ws/src/VIO/include/PX4_realsense_bridge/: PX4_realsense_bridge.h
T265_tof_ws/src/VIO/launch/: bridge.launch
T265_tof_ws/src/VIO/src/nodes/: mySerial.cpp  px4_realsense_bridge.cpp  px4_realsense_bridge_node.cpp
T265_tof_ws/src/realsense-ros/realsense2_camera/launch/: rs_t265.launch
T265_ws/src/get_px4_info/: CMakeLists.txt  package.xml
T265_ws/src/get_px4_info/src/: get_px4_info_node.cpp
T265_ws/src/get_t265_info/: CMakeLists.txt  package.xml
T265_ws/src/get_t265_info/src/: get_t265_info_node.cpp
T265_ws/src/px42t265_bridge/: CMakeLists.txt  package.xml
T265_ws/src/px42t265_bridge/include/px42t265_bridge/: px42t265_bridge.h
T265_ws/src/px42t265_bridge/launch/: px42t265_bridge.launch
T265_ws/src/px42t265_bridge/src/nodes/: px42t265_bridge.cpp  px42t265_bridge_node.cpp
Tof_ws/src/serial/: package.xml
Tof_ws/src/serial/include/: mySerial.h
Tof_ws/src/serial/launch/: serial.launch
Tof_ws/src/serial/src/: serial_node.cpp
UAV_ws/.catkin_tools/profiles/default/: devel_collisions.txt
UAV_ws/src/uav/: CMakeLists.txt  package.xml
UAV_ws/src/uav/config/: uav_arm.yaml  uav_info.yaml
UAV_ws/src/uav/include/uav/: Commander.h  Driver.h  Uav_info.h
UAV_ws/src/uav/launch/: catkin_make.sh  gazebo_control.sh  plot.sh  real_uav_control.sh  test.sh  uav_Drive.launch  uav_yaml.launch
UAV_ws/src/uav/shell/: catkin_make.sh  gazebo_control.sh  test.sh
UAV_ws/src/uav/src/: test1.cpp  uav_fly.cpp  uav_fly_gazebo.cpp
UAV_ws/src/uav/src/uav/: Commander.cpp  Driver.cpp  Driver_0.cpp  Uav_info.cpp
Uwb_ws/src/nlink_parser/: CMakeLists.txt
Uwb_ws/src/nlink_parser/include/PX4_realsense_bridge/: PX4_realsense_bridge.h
Uwb_ws/src/nlink_parser/launch/: linktrack.launch
Uwb_ws/src/nlink_parser/src/linktrack/: odometry.cpp  odometry.h
Uwb_ws/src/nlink_parser/src/nodes/: px4_realsense_bridge.cpp
Uwb_ws/src/serial/: CMakeLists.txt
Uwb_ws/src/serial/src/: serial_node.cpp
sh/: catkin_make_all.sh  launch_control.sh  pose_echo.sh  uav_control.sh
shell/: catkin_make_all.sh  launch_control.sh  launch_control_t265_tof.sh  px4_version.sh  uav_control.sh
shell/Compile/: catkin_make_all.sh  catkin_make_uav.sh  px4_version.sh
shell/Experiment/: pos_mocap.sh  pos_mocap_exp2.sh  pos_mocap_exp3.sh  pos_mocap_exp4.sh  pos_t265_tof.sh  tt.sh  uav_control.sh
shell/Plot/: plot.sh
shell/Simulation/: desired_uav_fly.sh  guidefly_control.sh
src/t265_tof/VIO/: CMakeLists.txt
src/t265_tof/VIO/include/realsense/: px4_realsense_bridge.h
src/t265_tof/VIO/launch/: bridge.launch
src/t265_tof/VIO/shell/: catkin_make.sh
src/t265_tof/VIO/src/: px4_realsense_bridge_node.cpp
src/t265_tof/VIO/src/nodes/: mySerial.cpp  px4_realsense_bridge_node.cpp
src/t265_tof/VIO/src/realsense/: mySerial.cpp  px4_realsense_bridge.cpp
src/t265_tof/realsense-ros/realsense2_camera/launch/: rs_t265_cam_imu_sync.launch
src/uav/: CMakeLists.txt  README.md  package.xml
src/uav/cfg/: uav_cmd.cfg
src/uav/config/: uav0_info.xml  uav_gazebo.xml  uav_info.yaml  uav_mocap.xml
src/uav/include/estimator/: pos_estimator.h
src/uav/include/other/: Print_.h
src/uav/include/uav/: Commander.h  Driver.h  Uav_info.h  common.h
src/uav/launch/: desired_uav_fly.launch  dynamic_guidefly.launch  uav_drvier_guidefly.launch  uav_yaml.launch
src/uav/launch/physical/: real_px4_startup.launch  real_uav_drvier.launch
src/uav/launch/simulation/: gazebo_px4_startup.launch  gazebo_uav_drvier.launch  single_vehicle_spawn_xtd.launch
src/uav/msg/: xyz_yaw_d.msg
src/uav/shell/: catkin_make.sh  gazebo_control.sh  test.sh
src/uav/src/: desired_uav_fly.cpp  dynamic_guidefly.cpp  estimator0.cpp  uav_fly.cpp  uav_fly_gazebo.cpp  uav_gazebo0.cpp  uav_guidefly_control.cpp  uav_real0.cpp
src/uav/src/estimator/: pos_estimator.cpp  z_gazebo_pose0.cpp  z_pos_estimator0.cpp
src/uav/src/other/: Print_.cpp
src/uav/src/uav/: Commander.cpp  Driver.cpp  Driver_0.cpp  Uav_info.cpp  z_Driver0.cpp
src/uav/srv/: desired_start.srv
src/vrpn_client_ros/: CMakeLists.txt  README.md
src/vrpn_client_ros/launch/: vrpn.launch  vrpn_wjl.launch
src/vrpn_client_ros/src/: vrpn_client_ros.cpp  vrpn_to_mavros.cpp
